add: adicionando os links do arquivo em css das fonts.

--- a/templates/Pagina_comprar-produto.html
+++ b/templates/Pagina_comprar-produto.html
@@ -13,6 +13,8 @@
     <!-- Estilos personalizados -->
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/style-pagina_comprar_produtos.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/style-cores_das_paginas.css') }}">
+    <link rel="stylesheet" href="{{url_for('static', filename='styles/style-fonts_das_paginas.css')}}">
+    
 </head>
 <body>
 
