--- a/templates/Pagina_apresentacao.html
+++ b/templates/Pagina_apresentacao.html
@@ -26,6 +26,7 @@
         <!-- CSS -->
         <link rel="stylesheet" href="{{ url_for('static', filename='styles/style-pagina_apresentacao.css') }}">
         <link rel="stylesheet" href="{{url_for('static', filename='styles/style-cores_das_paginas.css')}}">
+        <link rel="stylesheet" href="{{url_for('static', filename='styles/style-fonts_das_paginas.css')}}">
 
 </head>
 <body>
