--- a/templates/Pagina_busca.html
+++ b/templates/Pagina_busca.html
@@ -24,6 +24,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/style-pagina_busca.css') }}">
     <link rel="stylesheet" href="{{url_for('static', filename='styles/style-cores_das_paginas.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='styles/style-fonts_das_paginas.css')}}">
 
 </head>
 
