--- a/templates/Pagina_carrinho.html
+++ b/templates/Pagina_carrinho.html
@@ -24,7 +24,8 @@
     <!-- CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/style-pagina_carrinho.css') }}">
     <link rel="stylesheet" href="{{url_for('static', filename='styles/style-cores_das_paginas.css')}}">
-
+    <link rel="stylesheet" href="{{url_for('static', filename='styles/style-fonts_das_paginas.css')}}">
+    
 </head>
 
 <body>
