--- a/templates/Pagina_com_jogos_das_categorias.html
+++ b/templates/Pagina_com_jogos_das_categorias.html
@@ -22,6 +22,7 @@
         <!-- CSS -->
         <link rel="stylesheet" href="{{ url_for('static', filename='styles/style-pagina_com_jogos_das_categorias.css') }}">
         <link rel="stylesheet" href="{{url_for('static', filename='styles/style-cores_das_paginas.css')}}">
+        <link rel="stylesheet" href="{{url_for('static', filename='styles/style-fonts_das_paginas.css')}}">
 
 </head>
 <body>
