--- a/templates/Pagina_perfil-usuario.html
+++ b/templates/Pagina_perfil-usuario.html
@@ -22,6 +22,7 @@
         <!-- CSS -->
         <link rel="stylesheet" href="{{ url_for('static', filename='styles/style-pagina_perfil_usuario.css') }}">
         <link rel="stylesheet" href="{{url_for('static', filename='styles/style-cores_das_paginas.css')}}">
+        <link rel="stylesheet" href="{{url_for('static', filename='styles/style-fonts_das_paginas.css')}}">
 
 
 </head>
