--- a/templates/Pagina_inicial.html
+++ b/templates/Pagina_inicial.html
@@ -39,64 +39,28 @@
                     aria-expanded="false"><i class="bi bi-list"></i></button>
 
                 <ul class="dropdown-menu dropdown-menu-dark">
-                    <li><a class="dropdown-item active" href="#"><i class="bi bi-house-door-fill"></i></a></li>
-                    <li><a class="dropdown-item" href="#"><i class="bi bi-bookmark"></i></a></li>
-                    <li><a class="dropdown-item" href="#"><i class="bi bi-question-circle"></i></a></li>
+                    <li><a class="dropdown-item active" href="/"><i class="bi bi-house-door-fill"></i></a></li>
+                    <li><a class="dropdown-item" href="/categoria-jogos"><i class="bi bi-bookmark"></i></a></li>
+                    <li><a class="dropdown-item" href="/apresentacao"><i class="bi bi-question-circle"></i></a></li>
                 </ul>
 
             </div>
 
-            <img src="" alt="">
-            <a class="navbar-brand">ZCG Game Store</a>
-            <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+            <a class="navbar-brand" href="/">ZCG Game Store</a>
+            <form class="d-flex" role="search" action="/buscar_jogos" method="GET">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="q" />
                 <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
             </form>
 
-            <a href="#"><i class="bi bi-cart-plus"></i></a>
+            <a href="/carrinho"><i class="bi bi-cart-plus"></i></a>
 
             <div class="btn-group dropstart">
                 <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
                     aria-expanded="false"><i class="bi bi-person-circle"></i></button>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">My Accont</a></li>
-                    <li><a class="dropdown-item" href="#">Login/Register</a></li>
-                    <li><a class="dropdown-item" href="#">Logout</a></li>
-                </ul>
-            </div>
-
-    <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
-
-        <div class="container-fluid">
-
-            <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
-                    aria-expanded="false"><i class="bi bi-list"></i></button>
-
-                <ul class="dropdown-menu dropdown-menu-dark">
-                    <li><a class="dropdown-item active" href="#"><i class="bi bi-house-door-fill"></i></a></li>
-                    <li><a class="dropdown-item" href="#"><i class="bi bi-bookmark"></i></a></li>
-                    <li><a class="dropdown-item" href="#"><i class="bi bi-question-circle"></i></a></li>
-                </ul>
-
-            </div>
-
-            <img src="" alt="">
-            <a class="navbar-brand">ZCG Game Store</a>
-            <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-                <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
-            </form>
-
-            <a href="#"><i class="bi bi-cart-plus"></i></a>
-
-            <div class="btn-group dropstart">
-                <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
-                    aria-expanded="false"><i class="bi bi-person-circle"></i></button>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">My Accont</a></li>
-                    <li><a class="dropdown-item" href="#">Login/Register</a></li>
-                    <li><a class="dropdown-item" href="#">Logout</a></li>
+                    <li><a class="dropdown-item" href="/perfil-usuario">My Accont</a></li>
+                    <li><a class="dropdown-item" href="/cadastro">Login/Register</a></li>
+                    <li><a class="dropdown-item" href="/get/logout">Logout</a></li>
                 </ul>
             </div>
 
@@ -106,24 +70,7 @@
     </nav>
 
     <main>
-
-        <section class="main__games-carousel">
-
-            <h2>Jogos em Destaque</h2>
-
-            <div class="main__games-carousel-container">
-
-                <div id="carouselExampleRide" class="carousel slide main__games-carousel-item" data-bs-ride="carousel"
-                    data-bs-interval="3000">
-
-                    <div class="carousel-inner">
-                        {% for jogo_destaque2 in jogos_em_destaque2 %}
-                        <div class="carousel-item active">
-
-    </nav>
-
-    <main>
-
+        
         <section class="main__games-carousel">
 
             <h1>Jogos em Destaque</h1>
@@ -148,7 +95,6 @@
                     </button>
 
                     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide">
-                    </button>
 
                 </div>
 
@@ -168,58 +114,6 @@
                     </button>
 
                     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide">
-
-                            <!-- A img abaixo é para uma foto de jogo em destaque -->
-                            <img src="{{jogo_destaque2.url}}" class="d-block w-100" alt="">
-
-                        </div>
-                        {% endfor %}
-                </div>
-
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide"
-                        data-bs-slide="prev">
-
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-
-                    </button>
-
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide"
-                        data-bs-slide="next">
-
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-
-                    </button>
-
-                </div>
-
-                <div id="carouselExampleRide" class="carousel slide main__games-carousel-item" data-bs-ride="carousel"
-                    data-bs-interval="3000">
-
-                    <div class="carousel-inner">
-                        {% for jogo_destaque in jogos_em_destaque %}
-                        <div class="carousel-item active">
-                            <!-- A img abaixo é para uma foto de jogo em destaque -->
-                            <img src="{{jogo_destaque.url}}" class="d-block w-100" alt="">
-                        </div>
-                        {% endfor %}
-                    </div>
-
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide"
-                        data-bs-slide="prev">
-
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-
-                    </button>
-
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide"
-                        data-bs-slide="next">
-
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-
                     </button>
 
                 </div>
@@ -238,14 +132,17 @@
                 <img src="{{jogo.url}}" class="card-img-top img-jogo" alt="">
 
                 <div class="card-body container-sobre-jogo">
-
-                    <p class="card-title">{{jogo.nome_jogo}}</p>
+ 
+                    <h2>{{jogo.nome_jogo}}</2>
                     <br>
                     <p class="card-text">{{jogo.descricao_jogo}}</p>
                     <br>
                     <p>R$: {{jogo.preco}}</p>
                     <br>
                     <p>Categoria: {{jogo.categoria}}</p>
+
+                    <!-- Aqui vai o link para ver o produto -->
+                    <a href="/comprar-produto/{{jogo.cod_jogo}}">Ver</a>
 
                 </div>
 
