modify: correção, falta de atenção ao colocar o 'h2' na pagina.

--- a/templates/Pagina_inicial.html
+++ b/templates/Pagina_inicial.html
@@ -133,7 +133,7 @@
 
                 <div class="card-body container-sobre-jogo">
  
-                    <h2>{{jogo.nome_jogo}}</2>
+                    <h2>{{jogo.nome_jogo}}</h2>
                     <br>
                     <p class="card-text">{{jogo.descricao_jogo}}</p>
                     <br>
