modify: arrumando varios 'h2' na pagina

--- a/templates/Pagina_perfil-usuario.html
+++ b/templates/Pagina_perfil-usuario.html
@@ -102,25 +102,25 @@
 
                 <li>
                     <input type="checkbox">
-                    <h2>Produto-01</h2>
+                    <p>Produto-01</p>
                     <button>Excluir</button>
                 </li>
 
                 <li>
                     <input type="checkbox">
-                    <h2>Produto-02</h2>
+                    <p>Produto-02</p>
                     <button>Excluir</button>
                 </li>
 
                 <li>
                     <input type="checkbox">
-                    <h2>Produto-03</h2>
+                    <p>Produto-03</p>
                     <button>Excluir</button>
                 </li>
 
                 <li>
                     <input type="checkbox">
-                    <h2>Produto-04</h2>
+                    <p>Produto-04</p>
                     <button>Excluir</button>
                 </li>
 
