--- a/static/styles/style-pagina_comprar_produtos.css
+++ b/static/styles/style-pagina_comprar_produtos.css
@@ -125,7 +125,7 @@ a
 }
 
 .main__produto-compra-comprar button,
-.main__produto-termos-comprar button
+.main__produto-compra-termos button
 {
     width: 200px;
     height: 100px;
@@ -155,7 +155,7 @@ a
     scale: 1.1;
 }
 
-.main__produto-termos-comprar button
+.main__produto-compra-termos button
 {
     color: var(--branco);
     background-color: transparent;
@@ -164,7 +164,7 @@ a
     transition: 0.5s;
 }
 
-.main__produto-termos-comprar button:hover
+.main__produto-compra-termos button:hover
 {
     color: var(--preto);
     background-color: var(--azul_claro);
@@ -245,8 +245,7 @@ a
     gap: 50px;
 }
 
-.main__comentario-container-button-publicar button,
-.main__comentario-container-button-limpar button
+.main__comentario-container-button-publicar
 {
     width: 200px;
     height: 60px;
@@ -255,7 +254,7 @@ a
     border-radius: 10px;
 }
 
-.main__comentario-container-button-publicar button
+.main__comentario-container-button-publicar
 {
     color: var(--branco);
     background-color: transparent;
@@ -264,28 +263,10 @@ a
     transition: 0.5s;
 }
 
-.main__comentario-container-button-publicar button:hover
+.main__comentario-container-button-publicar:hover
 {
     color: var(--preto);
     background-color: var(--verde_claro);
-    border: 1px solid var(--branco);
-    
-    scale: 1.1;
-}
-
-.main__comentario-container-button-limpar button
-{
-    color: var(--branco);
-    background-color: transparent;
-    border: 1px solid var(--vermelho);
-
-    transition: 0.5s;
-}
-
-.main__comentario-container-button-limpar button:hover
-{
-    color: var(--preto);
-    background-color: var(--vermelho);
     border: 1px solid var(--branco);
     
     scale: 1.1;
