--- a/templates/Pagina_categoria.html
+++ b/templates/Pagina_categoria.html
@@ -20,10 +20,12 @@
     <!-- links interno -->
 
         <!-- CSS -->
-        <link rel="stylesheet" href="{{ url_for('static', filename='styles/style-pagina_categoria.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='styles/style-pagina_categoria_jogos.css') }}">
         <link rel="stylesheet" href="{{url_for('static', filename='styles/style-cores_das_paginas.css')}}">
+        <link rel="stylesheet" href="{{url_for('static', filename='styles/style-fonts_das_paginas.css')}}">
 
 </head>
+
 <body>
     
 <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
@@ -34,15 +36,15 @@
             <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-list"></i></button>
 
             <ul class="dropdown-menu dropdown-menu-dark">
-                <li><a class="dropdown-item active" href="#"><i class="bi bi-house-door-fill"></i></a></li>
-                <li><a class="dropdown-item" href="#"><i class="bi bi-bookmark"></i></a></li>
-                <li><a class="dropdown-item" href="#"><i class="bi bi-question-circle"></i></a></li>
+                <li><a class="dropdown-item active" href="/"><i class="bi bi-house-door-fill"></i></a></li>
+                <li><a class="dropdown-item" href="/categoria-jogos"><i class="bi bi-bookmark"></i></a></li>
+                <li><a class="dropdown-item" href="/apresentacao"><i class="bi bi-question-circle"></i></a></li>
             </ul>
             
         </div>
 
         <img src="" alt="">
-        <a class="navbar-brand">ZCG Game Store</a>
+        <a class="navbar-brand" href="/">ZCG Game Store</a>
         <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
             <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
@@ -77,45 +79,29 @@
             <div class="main__category-container">
 
                 <form>
-                    
-                    <button>
 
                         <a href="#">Categoria</a>
-
-                    </button>
 
                 </form>
 
 
                 <form>
-                    
-                    <button>
 
                         <a href="#">Categoria</a>
-
-                    </button>
 
                 </form>
 
 
                 <form>
-                    
-                    <button>
 
                         <a href="#">Categoria</a>
-
-                    </button>
 
                 </form>
 
 
                 <form>
-                    
-                    <button>
 
                         <a href="#">Categoria</a>
-
-                    </button>
 
                 </form>
 
@@ -125,45 +111,29 @@
             <div class="main__category-container">
 
                 <form>
-                    
-                    <button>
 
                         <a href="#">Categoria</a>
-
-                    </button>
 
                 </form>
 
 
                 <form>
-                    
-                    <button>
 
                         <a href="#">Categoria</a>
-
-                    </button>
 
                 </form>
 
 
                 <form>
-                    
-                    <button>
 
                         <a href="#">Categoria</a>
-
-                    </button>
 
                 </form>
 
 
                 <form>
-                    
-                    <button>
 
                         <a href="#">Categoria</a>
-
-                    </button>
 
                 </form>
 
