--- a/static/styles/style-pagina_perfil_usuario.css
+++ b/static/styles/style-pagina_perfil_usuario.css
@@ -1,4 +1,3 @@
-/* Formatando Tudo */
 *
 {
     padding: 0;
@@ -12,6 +11,7 @@ body
     background-color: var(--preto);
     color: var(--branco);
 }
+
 
 /* Formatando todos os botões para um padrão */
 button
@@ -97,7 +97,7 @@ a
     align-items: start;
     gap: 40px;
 
-    border: 1px solid var(--cinza_claro);
+    border: 1px solid var(--roxo);
     border-radius: 10px;
 }
 
@@ -164,7 +164,7 @@ a
     align-items: center;
     gap: 40px;
 
-    border: 1px solid var(--cinza_claro);
+    border: 1px solid var(--roxo);
     border-radius: 10px 0 0 10px;
 }
 
@@ -221,7 +221,7 @@ a
     justify-content: space-around;
     align-items: center;
 
-    border: 1px solid var(--cinza_claro);
+    border: 1px solid var(--roxo);
     border-radius: 10px;
 }
 
