--- a/static/styles/style-pagina_cadastrar.css
+++ b/static/styles/style-pagina_cadastrar.css
@@ -1,4 +1,3 @@
-/* Formatando Tudo */
 *
 {
     padding: 0;
@@ -78,7 +77,7 @@ a
     text-align: center;
     align-items: center;
 
-    border: 1px solid var(--cinza_claro);
+    border: 1px solid var(--roxo);
     border-radius: 10px;
 }
 
@@ -93,7 +92,7 @@ a
     align-items: center;
     gap: 20px;
 
-    border: 1px solid var(--cinza_claro);
+    border: 1px solid var(--roxo);
     border-radius: 10px;
 }
 
@@ -128,6 +127,7 @@ a
 .main__form-cadastro a
 {
  all: revert;
+ color: var(--azul_claro);
 }
 
 .footer
