--- a/static/styles/style-pagina_apresentacao.css
+++ b/static/styles/style-pagina_apresentacao.css
@@ -1,4 +1,3 @@
-/* Formatando Tudo */
 *
 {
     padding: 0;
@@ -11,7 +10,6 @@ body
     background-color: var(--preto);
     color: var(--branco);
 }
-
 
 /* Formatando todos os botões para um padrão */
 button
@@ -57,6 +55,7 @@ a
 
     background-color: var(--cinza_escuro);
     border: 1px solid var(--cinza_claro);
+    border-radius: 10px;
 }
 
 
@@ -88,7 +87,7 @@ a
 
     margin-left: 20px;
 
-    border: 1px solid var(--cinza_claro);
+    border: 1px solid var(--roxo);
     border-radius: 10px;
 }
 
@@ -106,7 +105,7 @@ a
     justify-content: center;
     gap: 40px;
 
-    border: 1px solid var(--cinza_claro);
+    border: 1px solid var(--roxo);
     border-radius: 10px 0 0 10px;
 }
 
@@ -129,7 +128,7 @@ a
 
     padding: 10px;
 
-    border: 1px solid var(--cinza_claro);
+    border: 1px solid var(--roxo);
     border-radius: 0 10px 10px 0;
 }
 
