--- a/static/styles/style-pagina_carrinho.css
+++ b/static/styles/style-pagina_carrinho.css
@@ -70,7 +70,7 @@ a
 
 .main__produtos-container
 {
-    width: 90%;
+    width: 100%;
     height: 90%;
 
     display: flex;
@@ -79,37 +79,41 @@ a
     align-items: center;
 }
 
-.main__produtos-container ul
+.main__produtos-nome,
+.main__produtos-imagem
 {
     width: 800px;
     height: 400px;
 
-    margin: 10px auto;
+    margin: 20px;
+    padding: 10px;
 
     overflow-y: scroll;
     overflow-x: hidden;
 
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    gap: 30px;
 
     border: 1px solid var(--roxo);
     border-radius: 10px 0 0 10px;
 }
 
-.main__produtos-container li
+.main__produtos-container li,
+.main__produtos-imagem li
 {
     width: 600px;
     height: 60px;
+    min-height: 60px;
+
+    margin-top: 20px;
 
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
 
-    border: 1px solid var(--cinza_claro);
+    border: 1px solid var(--branco);
     border-radius: 10px;
 }
 
@@ -143,19 +147,26 @@ a
     scale: 1.1;
 }
 
-.main__produtos-container img
-{
-    width: 665px;
-    height: 400px;
 
-    margin: 10px auto;
+.main__produtos-imagem li
+{
+    min-height: 400px;
+
+    justify-content: center;
+    flex-direction: column;
+}
+
+.main__produtos-imagem li > img
+{
+    width: 550px;
+    height: 300px;
 
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
 
-    border: 1px solid var(--cinza_claro);
+    border: 1px solid var(--branco);
     border-radius: 10px;
 }
 
@@ -285,16 +296,4 @@ a
 .footer__social a
 {
     font-size: 20px;
-}
-
-/* adrian esteve aq */
-
-.div-imagem-produto{
-    height: 500px;
-    width: 1000px;
-
-    text-align: center;
-
-    overflow: scroll;
-    overflow-x: hidden;
 }
