--- a/templates/Pagina_inicial.html
+++ b/templates/Pagina_inicial.html
@@ -124,31 +124,118 @@
 
         <section class="main__games">
 
-            {% for jogo in produto %}
 
-            <div class="card container-img-jogos" style="width: 18rem;">
+            <div class="jogos1">
 
-                <!-- A img abaixo é para uma foto de jogo -->
-                <img src="{{jogo.url}}" class="card-img-top img-jogo" alt="">
+                {% for jogo in produto %}
 
-                <div class="card-body container-sobre-jogo">
- 
-                    <h2>{{jogo.nome_jogo}}</h2>
-                    <br>
-                    <p class="card-text">{{jogo.descricao_jogo}}</p>
-                    <br>
-                    <p>R$: {{jogo.preco}}</p>
-                    <br>
-                    <p>Categoria: {{jogo.categoria}}</p>
+                <div class="card container-img-jogos" style="width: 18rem;">
 
-                    <!-- Aqui vai o link para ver o produto -->
-                    <a href="/comprar-produto/{{jogo.cod_jogo}}">Ver</a>
+                    <!-- A img abaixo é para uma foto de jogo -->
+                    <img src="{{jogo.url}}" class="card-img-top img-jogo" alt="">
+
+                    <div class="card-body container-sobre-jogo">
+    
+                        <h2>{{jogo.nome_jogo}}</h2>
+                        <br>
+                        <p>R$: {{jogo.preco}}</p>
+                        <br>
+                        <p>Categoria: {{jogo.categoria}}</p>
+
+                        <!-- Aqui vai o link para ver o produto -->
+                        <a href="/comprar-produto/{{jogo.cod_jogo}}">Ver</a>
+
+                    </div>
 
                 </div>
 
+                {% endfor %}
+
             </div>
 
-            {% endfor %}
+            <div class="jogos2">
+
+                {% for jogo in produto %}
+
+                <div class="card container-img-jogos" style="width: 18rem;">
+
+                    <!-- A img abaixo é para uma foto de jogo -->
+                    <img src="{{jogo.url}}" class="card-img-top img-jogo" alt="">
+
+                    <div class="card-body container-sobre-jogo">
+    
+                        <h2>{{jogo.nome_jogo}}</h2>
+                        <br>
+                        <p>R$: {{jogo.preco}}</p>
+                        <br>
+                        <p>Categoria: {{jogo.categoria}}</p>
+
+                        <!-- Aqui vai o link para ver o produto -->
+                        <a href="/comprar-produto/{{jogo.cod_jogo}}">Ver</a>
+
+                    </div>
+
+                </div>
+
+                {% endfor %}
+
+            </div>
+
+            <div class="jogos1">
+
+                {% for jogo in produto %}
+
+                <div class="card container-img-jogos" style="width: 18rem;">
+
+                    <!-- A img abaixo é para uma foto de jogo -->
+                    <img src="{{jogo.url}}" class="card-img-top img-jogo" alt="">
+
+                    <div class="card-body container-sobre-jogo">
+    
+                        <h2>{{jogo.nome_jogo}}</h2>
+                        <br>
+                        <p>R$: {{jogo.preco}}</p>
+                        <br>
+                        <p>Categoria: {{jogo.categoria}}</p>
+
+                        <!-- Aqui vai o link para ver o produto -->
+                        <a href="/comprar-produto/{{jogo.cod_jogo}}">Ver</a>
+
+                    </div>
+
+                </div>
+
+                {% endfor %}
+
+            </div>
+
+            <div class="jogos2">
+
+                {% for jogo in produto %}
+
+                <div class="card container-img-jogos" style="width: 18rem;">
+
+                    <!-- A img abaixo é para uma foto de jogo -->
+                    <img src="{{jogo.url}}" class="card-img-top img-jogo" alt="">
+
+                    <div class="card-body container-sobre-jogo">
+    
+                        <h2>{{jogo.nome_jogo}}</h2>
+                        <br>
+                        <p>R$: {{jogo.preco}}</p>
+                        <br>
+                        <p>Categoria: {{jogo.categoria}}</p>
+
+                        <!-- Aqui vai o link para ver o produto -->
+                        <a href="/comprar-produto/{{jogo.cod_jogo}}">Ver</a>
+
+                    </div>
+
+                </div>
+
+                {% endfor %}
+
+            </div>
 
         </section>
 
