--- a/static/styles/style-pagina_inicial.css
+++ b/static/styles/style-pagina_inicial.css
@@ -102,15 +102,6 @@ main
     border-radius: 10px;
 }
 
-.main__games-carousel h2
-{
-    margin-bottom: 20px;
-
-    text-align: center;
-
-    color: var(--branco);
-}
-
 .main__games-carousel-container
 {
     width: 90%;
@@ -152,27 +143,50 @@ main
 .main__games
 {
     width: 100%;
-    height: 150vh;
+    height: 100%;
 
     margin: 20px auto;
 
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: row;
+    justify-content: center;
 
     gap: 16px;
     padding: 16px;
 
-    flex-wrap: wrap;
+    
     border: 1px solid var(--preto);
     border-radius: 10px;
+}
+
+/* Container dos cards */
+.jogos1
+{
+    width: 40%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
+.jogos2
+{
+    width: 40%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    gap: 20px;
 }
 
 /* Cards de jogos */
 .card
 {
     width: 300px;
-    height: 600px;
+    height: 500px;
 
     margin: 10px;
 
@@ -195,7 +209,7 @@ main
 .img-jogo
 {
     width: 100%;
-    height: 180px;
+    height: 30%;
 
     border-radius: 12px 12px 0 0;
     border-top: 15px;
@@ -203,8 +217,8 @@ main
 
 .container-sobre-jogo
 {
-    width: 300px;
-    height: 350px;
+    width: 100%;
+    height: 70%;
 
     display: flex;
     flex-direction: column;
