modify: colocando barra de pesquisa

--- a/templates/Pagina_logar.html
+++ b/templates/Pagina_logar.html
@@ -51,6 +51,10 @@
 
         <img src="" alt="">
         <a class="navbar-brand" href="/">ZCG Game Store</a>
+        <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
+            <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
+        </form>
 
         <a href="/carrinho"><i class="bi bi-cart-plus"></i></a>
 
