--- a/templates/Pagina_busca.html
+++ b/templates/Pagina_busca.html
@@ -53,7 +53,7 @@
                 <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
             </form>
 
-            <a href="#"><i class="bi bi-cart-plus"></i></a>
+            <a href="/carrinho"><i class="bi bi-cart-plus"></i></a>
 
             <div class="btn-group dropstart">
                 <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
