--- a/templates/Pagina_comprar-produto.html
+++ b/templates/Pagina_comprar-produto.html
@@ -46,9 +46,9 @@
                     <i class="bi bi-person-circle"></i>
                 </button>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Minha Conta</a></li>
-                    <li><a class="dropdown-item" href="#">Login/Register</a></li>
-                    <li><a class="dropdown-item" href="#">Logout</a></li>
+                    <li><a class="dropdown-item" href="/perfil-usuario">My Accont</a></li>
+                    <li><a class="dropdown-item" href="/login">Login/Register</a></li>
+                    <li><a class="dropdown-item" href="/get/logout">Logout</a></li>
                 </ul>
             </div>
         </div>
