BARRA DE BUSCA ATUALIZADA

--- a/templates/Pagina_inicial.html
+++ b/templates/Pagina_inicial.html
@@ -26,6 +26,10 @@
     <link rel="stylesheet" href="{{url_for('static', filename='styles/style-cores_das_paginas.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='styles/style-fonts_das_paginas.css')}}">
 
+    <!-- JS -->
+    <link rel="stylesheet" href="{{url_for('static', filename='js/Validar_busca.js')}}">
+
+
 </head>
 
 <body>
@@ -47,10 +51,11 @@
             </div>
 
             <a class="navbar-brand" href="/">ZCG Game Store</a>
-            <form class="d-flex" role="search" action="/buscar_jogos" method="GET">
+            <form class="d-flex" role="search" action="/buscar_jogos" method="GET" id="form-busca"  >
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="q" />
                 <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
             </form>
+            <p id="mensagem-erro" class="text-danger mt-1" style="display: none;">Digite pelo menos 2 letras para buscar.</p>
 
             <a href="/carrinho"><i class="bi bi-cart-plus"></i></a>
 
