modify: mudando nomeação de 'cancelar' para 'limpar carrinho'

--- a/templates/Pagina_carrinho.html
+++ b/templates/Pagina_carrinho.html
@@ -122,7 +122,7 @@
 
                     <form action="" class="main__termos-container-button-cancelar">
 
-                        <button>Cancelar</button>
+                        <button>Limpar Carrinho</button>
 
                     </form>
                   
