add: adicionando classes e containers para a responsividade

--- a/templates/Pagina_inicial.html
+++ b/templates/Pagina_inicial.html
@@ -26,6 +26,10 @@
     <link rel="stylesheet" href="{{url_for('static', filename='styles/style-cores_das_paginas.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='styles/style-fonts_das_paginas.css')}}">
 
+    <!-- JS -->
+    <link rel="stylesheet" href="{{url_for('static', filename='js/Validar_busca.js')}}">
+
+
 </head>
 
 <body>
@@ -47,10 +51,11 @@
             </div>
 
             <a class="navbar-brand" href="/">ZCG Game Store</a>
-            <form class="d-flex" role="search" action="/buscar_jogos" method="GET">
+            <form class="d-flex" role="search" action="/buscar_jogos" method="GET" id="form-busca"  >
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="q" />
                 <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
             </form>
+            <p id="mensagem-erro" class="text-danger mt-1" style="display: none;">Digite pelo menos 2 letras para buscar.</p>
 
             <a href="/carrinho"><i class="bi bi-cart-plus"></i></a>
 
@@ -124,116 +129,123 @@
 
         <section class="main__games">
 
+            <div class="main__games-jogos">
 
-            <div class="jogos1">
+                <div class="main__games-jogos-01">
 
-                {% for jogo in produto %}
+                    {% for jogo in produto %}
 
-                <div class="card container-img-jogos" style="width: 18rem;">
+                    <div class="card container-img-jogos" style="width: 18rem;">
 
-                    <!-- A img abaixo é para uma foto de jogo -->
-                    <img src="{{jogo.url}}" class="card-img-top img-jogo" alt="">
+                        <!-- A img abaixo é para uma foto de jogo -->
+                        <img src="{{jogo.url}}" class="card-img-top img-jogo" alt="">
 
-                    <div class="card-body container-sobre-jogo">
-    
-                        <h2>{{jogo.nome_jogo}}</h2>
-                        <br>
-                        <p>R$: {{jogo.preco}}</p>
-                        <br>
-                        <p>Categoria: {{jogo.categoria}}</p>
+                        <div class="card-body container-sobre-jogo">
+        
+                            <h2>{{jogo.nome_jogo}}</h2>
+                            <br>
+                            <p>R$: {{jogo.preco}}</p>
+                            <br>
+                            <p>Categoria: {{jogo.categoria}}</p>
 
-                        <!-- Aqui vai o link para ver o produto -->
-                        <a href="/comprar-produto/{{jogo.cod_jogo}}">Ver</a>
+                            <!-- Aqui vai o link para ver o produto -->
+                            <a href="/comprar-produto/{{jogo.cod_jogo}}">Ver</a>
+
+                        </div>
 
                     </div>
 
+                    {% endfor %}
+
                 </div>
 
-                {% endfor %}
+                <div class="main__games-jogos-02">
+
+                    {% for jogo in produto %}
+
+                    <div class="card container-img-jogos" style="width: 18rem;">
+
+                        <!-- A img abaixo é para uma foto de jogo -->
+                        <img src="{{jogo.url}}" class="card-img-top img-jogo" alt="">
+
+                        <div class="card-body container-sobre-jogo">
+        
+                            <h2>{{jogo.nome_jogo}}</h2>
+                            <br>
+                            <p>R$: {{jogo.preco}}</p>
+                            <br>
+                            <p>Categoria: {{jogo.categoria}}</p>
+
+                            <!-- Aqui vai o link para ver o produto -->
+                            <a href="/comprar-produto/{{jogo.cod_jogo}}">Ver</a>
+
+                        </div>
+
+                    </div>
+
+                    {% endfor %}
+
+                </div>
 
             </div>
 
-            <div class="jogos2">
+            <div class="main__games-jogos">
 
-                {% for jogo in produto %}
+                <div class="main__games-jogos-01">
 
-                <div class="card container-img-jogos" style="width: 18rem;">
+                    {% for jogo in produto %}
 
-                    <!-- A img abaixo é para uma foto de jogo -->
-                    <img src="{{jogo.url}}" class="card-img-top img-jogo" alt="">
+                    <div class="card container-img-jogos" style="width: 18rem;">
 
-                    <div class="card-body container-sobre-jogo">
-    
-                        <h2>{{jogo.nome_jogo}}</h2>
-                        <br>
-                        <p>R$: {{jogo.preco}}</p>
-                        <br>
-                        <p>Categoria: {{jogo.categoria}}</p>
+                        <!-- A img abaixo é para uma foto de jogo -->
+                        <img src="{{jogo.url}}" class="card-img-top img-jogo" alt="">
 
-                        <!-- Aqui vai o link para ver o produto -->
-                        <a href="/comprar-produto/{{jogo.cod_jogo}}">Ver</a>
+                        <div class="card-body container-sobre-jogo">
+        
+                            <h2>{{jogo.nome_jogo}}</h2>
+                            <br>
+                            <p>R$: {{jogo.preco}}</p>
+                            <br>
+                            <p>Categoria: {{jogo.categoria}}</p>
 
-                    </div>
+                            <!-- Aqui vai o link para ver o produto -->
+                            <a href="/comprar-produto/{{jogo.cod_jogo}}">Ver</a>
 
-                </div>
-
-                {% endfor %}
-
-            </div>
-
-            <div class="jogos1">
-
-                {% for jogo in produto %}
-
-                <div class="card container-img-jogos" style="width: 18rem;">
-
-                    <!-- A img abaixo é para uma foto de jogo -->
-                    <img src="{{jogo.url}}" class="card-img-top img-jogo" alt="">
-
-                    <div class="card-body container-sobre-jogo">
-    
-                        <h2>{{jogo.nome_jogo}}</h2>
-                        <br>
-                        <p>R$: {{jogo.preco}}</p>
-                        <br>
-                        <p>Categoria: {{jogo.categoria}}</p>
-
-                        <!-- Aqui vai o link para ver o produto -->
-                        <a href="/comprar-produto/{{jogo.cod_jogo}}">Ver</a>
+                        </div>
 
                     </div>
 
+                    {% endfor %}
+
                 </div>
 
-                {% endfor %}
+                <div class="main__games-jogos-02">
 
-            </div>
+                    {% for jogo in produto %}
 
-            <div class="jogos2">
+                    <div class="card container-img-jogos" style="width: 18rem;">
 
-                {% for jogo in produto %}
+                        <!-- A img abaixo é para uma foto de jogo -->
+                        <img src="{{jogo.url}}" class="card-img-top img-jogo" alt="">
 
-                <div class="card container-img-jogos" style="width: 18rem;">
+                        <div class="card-body container-sobre-jogo">
+        
+                            <h2>{{jogo.nome_jogo}}</h2>
+                            <br>
+                            <p>R$: {{jogo.preco}}</p>
+                            <br>
+                            <p>Categoria: {{jogo.categoria}}</p>
 
-                    <!-- A img abaixo é para uma foto de jogo -->
-                    <img src="{{jogo.url}}" class="card-img-top img-jogo" alt="">
+                            <!-- Aqui vai o link para ver o produto -->
+                            <a href="/comprar-produto/{{jogo.cod_jogo}}">Ver</a>
 
-                    <div class="card-body container-sobre-jogo">
-    
-                        <h2>{{jogo.nome_jogo}}</h2>
-                        <br>
-                        <p>R$: {{jogo.preco}}</p>
-                        <br>
-                        <p>Categoria: {{jogo.categoria}}</p>
-
-                        <!-- Aqui vai o link para ver o produto -->
-                        <a href="/comprar-produto/{{jogo.cod_jogo}}">Ver</a>
+                        </div>
 
                     </div>
 
-                </div>
+                    {% endfor %}
 
-                {% endfor %}
+                </div>
 
             </div>
 
