modify: adicionando classe em um dos carrosséis

--- a/templates/Pagina_inicial.html
+++ b/templates/Pagina_inicial.html
@@ -103,7 +103,7 @@
 
                 </div>
 
-                <div id="carouselExampleRide" class="carousel slide main__games-carousel-item" data-bs-ride="carousel"
+                <div id="carouselExampleRide" class="carousel slide main__games-carousel-item cell" data-bs-ride="carousel"
                     data-bs-interval="3000">
 
                     <div class="carousel-inner">
