--- a/templates/Pagina_carrinho.html
+++ b/templates/Pagina_carrinho.html
@@ -77,7 +77,7 @@
                     <li>
                         <a href="/comprar/individual/{{item.cod_jogo}}" class="main__produtos-nome-button-compraIn">Compra Individual</a>
                         <p>{{ item.nome_jogo }}</p>
-                        <button><a href="/excluir/{{ item.cod_jogo }}">Excluir</a></button>
+                        <button><a href="/excluir/{{ item.cod_jogo }}" class="main__produtos-nome-button-exclui">Excluir</a></button>
                     </li>
                     {% endfor %}
                 </ul>
