add: compra de todos os jogos dentro do carrinho

--- a/templates/Pagina_carrinho.html
+++ b/templates/Pagina_carrinho.html
@@ -105,7 +105,7 @@
 
                 <div class="main__termos-container-button">
                     
-                    <form action="" class="main__termos-container-button-comprar">
+                    <form action="/comprar/tudo" class="main__termos-container-button-comprar">
 
                         <button>Continuar para a compra</button>
 
