add: adicionando links da media nas pagina em html

--- a/templates/Pagina_cadastrar.html
+++ b/templates/Pagina_cadastrar.html
@@ -27,6 +27,7 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='styles/style-pagina_cadastrar.css') }}">
         <link rel="stylesheet" href="{{url_for('static', filename='styles/style-cores_das_paginas.css')}}">
         <link rel="stylesheet" href="{{url_for('static', filename='styles/style-fonts_das_paginas.css')}}">
+        <link rel="stylesheet" href="{{url_for('static', filename='styles/media.css')}}">
 
 </head>
 <body>
