--- a/templates/Pagina_comprar-produto.html
+++ b/templates/Pagina_comprar-produto.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/style-pagina_comprar_produtos.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/style-cores_das_paginas.css') }}">
     <link rel="stylesheet" href="{{url_for('static', filename='styles/style-fonts_das_paginas.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='styles/media.css')}}">
     
 </head>
 <body>
