--- a/templates/Pagina_inicial.html
+++ b/templates/Pagina_inicial.html
@@ -25,7 +25,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/style-pagina_inicial.css') }}">
     <link rel="stylesheet" href="{{url_for('static', filename='styles/style-cores_das_paginas.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='styles/style-fonts_das_paginas.css')}}">
-
+    <link rel="stylesheet" href="{{url_for('static', filename='styles/media.css')}}">
+    
     <!-- JS -->
     <link rel="stylesheet" href="{{url_for('static', filename='js/Validar_busca.js')}}">
 
