add correção de erro, action do form para o botão cancelar estava vasio, preenchi com a rota de excluir os itens do carrinho

--- a/templates/Pagina_carrinho.html
+++ b/templates/Pagina_carrinho.html
@@ -111,7 +111,7 @@
 
                     </form>
 
-                    <form action="" class="main__termos-container-button-cancelar">
+                    <form action="/limpar_carrinho" class="main__termos-container-button-cancelar">
 
                         <button>Cancelar</button>
 
